Making breadcrumbs a component, fixing nav on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -138,7 +138,7 @@ a {
 }
 
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: var(--accent-card);
@@ -193,6 +193,7 @@ a {
 .btn-section {
   display: flex;
   flex-direction: column;
+  margin-top: auto;
 }
 .btn-section button {
   width: 100%;
