--- a/src/styles/budgetstyles.css
+++ b/src/styles/budgetstyles.css
@@ -47,7 +47,8 @@
 .budget-top {
   max-width: 720px;
   margin-right: auto;
-  margin-left: 25px;
+  margin-bottom: 15px;
+ 
 }
 
 .btn-back {
